fixing width on safari

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -88,8 +88,11 @@ img {
   display: block;
 }
 
-p:has(img) {
+/* p:has(img) {
   width: 100%;
-  /* max-height: 40vh; */
+
   margin: 0 auto;
-}
+} */
+
+
+  /* max-height: 40vh; */
